# toy_network

./: README.md  demo.ipynb  pyproject.toml
.github/workflows/: test.yaml
src/: activation.py  losses.py  metrics.py  nn.py  tensor.py
tests/: test_nn.py  test_tensor.py
