[project]
name = "toy-network"
version = "0.1.0"
description = "Simple Neural Network Simulation Library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
]

[project.optional-dependencies]
test = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
